# SonaVoice

./: .gitignore  Makefile  README.md  vercel.json
.github/workflows/: ci-workflow.yaml  deploy-staging.yaml
api/: .env.example  .gitignore  Makefile  README.md  go.mod  go.sum
api/cmd/: README.md
api/docker/: README.md
api/internal/configs/: auth.config.go  database.config.go  index.go  logger.config.go  server.config.go
api/internal/core/: constants.go
api/internal/database/: README.md  init.go  query.go
api/internal/middlewares/: README.md  clerk-auth.middleware.go  require-role.middleware.go
docs/mermaids/: start-session-flow.mmd
infrastructure/: .gitignore
services/api/: .env.example  .gitignore  Makefile  go.mod  go.sum  vercel.json
services/speech-engine/: .env.example  .gitignore  main.py  modal_app.py  pyproject.toml  requirements.txt
services/speech-engine/src/: runner.py
services/speech-engine/src/agents/: prompts.py  tools.py
services/speech-engine/src/core/: app_resources.py  config.py
services/speech-engine/src/pipelines/: handlers.py  processors.py  services.py  tasks.py
services/speech-engine/src/services/: messages_service.py  session_service.py
services/speech-engine/src/transports/: daily.py  small_webrtc.py
services/speech-engine/src/types/: messages.py
services/speech-engine/src/utils/: error_msg.py
web/: .gitignore  i18n.config.ts  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json
web/src/: instrumentation-client.ts  instrumentation.ts  proxy.ts
(+411 files in other folders)
