[project]
name = "speech-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.0.1",
    "ipykernel>=7.2.0",
    "loguru>=0.7.3",
    "mem0ai[nlp]>=2.0.2",
    "pipecat-ai[cartesia,daily,deepgram,piper,runner,silero,webrtc]>=1.1.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
]
